--- a/style.css
+++ b/style.css
@@ -33,6 +33,21 @@ body {
 a:focus {
 	outline: none !important;
 }
+table {
+	margin: 15px auto;
+}
+.logo-text h5 {
+	font-family:'Georgia';
+	font-size: 18px;
+	color: #0c0a08;
+	margin-bottom: 0;
+}
+.logo-text p {
+	font-family:'Arial';
+	font-size: 14px;
+	color: #949391;
+	margin-top: 0;
+}
 
 /*
 *=======================================================================================================
@@ -40,28 +55,10 @@ a:focus {
 *=======================================================================================================
 */
 
-/* --- logo ---*/
+/* --- header ---*/
 
 header {
 	border-bottom: 2px solid #ebecec;
-}
-
-/* --- logo ---*/
-
-header .logo img {
-	padding: 15px 0;
-}
-header .logo-text h5 {
-	font-family:'Georgia';
-	font-size: 18px;
-	color: #0c0a08;
-	margin-top: 23px;
-	margin-bottom: 0;
-}
-.logo-text p {
-	font-family:'Arial';
-	font-size: 14px;
-	color: #949391;
 }
 
 /* --- phone-text ---*/
@@ -80,6 +77,7 @@ header .logo-text h5 {
 }
 
 /* --- email-text ---*/
+
 .email-text {
 	font-family:'Georgia';
 	font-size: 14px;
@@ -107,8 +105,8 @@ header .logo-text h5 {
 
 .banner-form {
 	border-radius: 5px;
-    background-color: rgba(52,51,51,0.7);
-	padding: 0 5px;
+	background-color: rgba(52, 51, 51, .7);
+	padding: 15px;
 	margin: 30px auto;
 }
 .banner-form h5 {
@@ -126,14 +124,22 @@ header .logo-text h5 {
 .banner-form input,
 .banner-form textarea {
 	font-family:'Arial';
-	font-size: 14px;
+	font-size: 14px !important;
 	font-style: italic;
+	font-weight: bold !important;
 	color: #939291;
 	margin-bottom: 10px;
 }
-.banner-form p.text-center {
+.banner-form form .submit {
+	width: 100%;
 	background-color: #116794;
+	border-color:  rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) !important;
 	padding: 10px 0;
+	font-family:'Georgia';
+	font-size: 18px;
+	font-style: italic;
+	font-weight: bold;
+	color: #fff;
 }
 .banner-form p.text-center a {
 	text-decoration: none;
@@ -204,6 +210,11 @@ header .logo-text h5 {
 	display: block;
 	width: 100%;
 }
+.psychology .paragraph-1 .doctor-article,
+.psychology .paragraph .doctor {
+	width: 290px;
+	margin: 0 auto;
+}
 .psychology h3 {
 	font-size: 18px;
 	color: #222;
@@ -217,7 +228,7 @@ header .logo-text h5 {
 	font-size: 14px;
 	color: #615f5f;
 }
-.psychology .paragraph p,
+.psychology .paragraph-1 p,
 .psychology h5 {
 	font-family:'Arial';
 	font-size: 16px;
@@ -228,7 +239,7 @@ header .logo-text h5 {
 .psychology h5 span {
 	padding-left: 17px;
 }
-.psychology .paragraph p {
+.psychology .paragraph-1 p {
 	font-size: 14px;
 	color: #888;
 }
@@ -285,7 +296,7 @@ header .logo-text h5 {
 .box {
 	background-color: #fff;
 	border-radius: 8px;
-	padding: 45px;
+	padding: 45px !important;
 	margin: 30px 0;
 }
 .box h2 {
@@ -327,6 +338,27 @@ header .logo-text h5 {
 .box-right ul li i,
 .services .box-right h1 {
 	color: #92b83e;
+}
+
+/* --- review ---*/
+
+.review {
+	background-color: #f6f8fa;
+}
+.review h2 {
+	font-family: 'Georgia';
+	font-size: 30px;
+	color: #535252;
+	padding-top: 60px;
+	padding-bottom: 50px;
+}
+.review p {
+	font-family: 'Georgia';
+	font-size: 18px;
+	color: #868788;
+}
+.user {
+	padding: 50px 0;
 }
 
 /*
@@ -380,7 +412,7 @@ header .logo-text h5 {
 	padding: 10px;
 }
 
-/* --- paragraph ---*/
+/* --- paragraph-1 ---*/
 
 .libra {
 	margin-top: 130px;
@@ -433,6 +465,7 @@ footer {
 	font-size: 16px;
 	font-style: italic;
 	color: #116794;
+	text-align: center;
 	margin-top: 20px;
 }
 .footer-phone-text h5 span {
@@ -444,12 +477,10 @@ footer {
 	color: #888;
 	margin-top: 15px;
 }
-footer .logo img {
-	padding: 22.5px 0;
-}
-footer .logo-text h5 {
-	margin-top: 35px;
-	margin-bottom: 0;
+.banner-bottom .banner-form form .submit {
+	width: 190px;
+	border-radius: 5px;
+	margin: 5px auto;
 }
 
 /*
@@ -458,6 +489,17 @@ footer .logo-text h5 {
 *=======================================================================================================
 */
 
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 1200px) {
+	.banner-top .banner-form {
+		width: 40%;
+		right: 0;
+		bottom: 0;
+		position: absolute;
+		margin-bottom: 60px;
+	}
+}
+
 /* Medium Devices, Desktops */
 
 @media (min-width: 992px) {
@@ -465,15 +507,6 @@ footer .logo-text h5 {
 	.phone-text h5 {
 		width: 320px;
 		margin-top: 35px;
-	}
-	.banner-top .banner-form {
-		width: 45%;
-		padding: 40px;
-		padding-bottom: 20px;
-		right: 0;
-		bottom: 0;
-		position: absolute;
-		margin-bottom: 100px;
 	}
 	.banner-bottom {
 		min-height: 610px;
@@ -489,14 +522,6 @@ footer .logo-text h5 {
 		font-size: 24px;
 		color: #fff;
 		padding-bottom: 30px;
-	}
-	.banner-bottom .banner-form form p {
-		width: 190px;
-		border-radius: 5px;
-		margin: 0 auto;
-	}
-	footer .logo img {
-		margin-left: 150px;
 	}
 }
 
@@ -519,15 +544,18 @@ footer .logo-text h5 {
 		/* Margin bottom by footer height */
 		margin-bottom: 100px;
 	}
+	header table {
+		float: left;
+	}
 	.email-text {
 		text-align: right;
 	}
 	.banner-top .banner-form {
-		width: 50%;
-		padding: 20px;
-		right: 0;
-		bottom: 0;
-		position: absolute;
+		padding: 40px;
+		padding-bottom: 20px;
+	}
+	.banner-form p {
+		padding-top: 10px;
 	}
 	.banner-top img {
 		display: block;
@@ -541,7 +569,7 @@ footer .logo-text h5 {
 	}
 	.banner-form input,
 	.banner-form textarea {
-		font-size: 16px;
+		font-size: 18px !important;
 	}
 	.psychology {
 		margin: 70px 0;
@@ -549,9 +577,6 @@ footer .logo-text h5 {
 	.libra {
 		margin-top: 0;
 		margin-bottom: 130px;
-	}
-	.doctor {
-		padding: 0 80px;
 	}
 	.lose {
 		padding-left: 50px;
@@ -565,16 +590,13 @@ footer .logo-text h5 {
 	}
 	.footer-phone-text h5 {
 		width: 320px;
+		text-align: left;
 		margin-top: 40px;
 	}
 	.footer-text {
 		margin-top: 35px;
 	}
-	footer .logo img {
-		padding: 22.5px 0;
-	}
-	footer .logo-text h5 {
-		margin-top: 35px;
-		margin-bottom: 0;
+	footer table {
+		float: right;
 	}
 }
